# servo-fetch

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  cliff.toml  clippy.toml  deny.toml  install.sh  release-plz.toml  taplo.toml  typos.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/actions/sccache/: action.yml
.github/scripts/: sync-labels.sh
.github/workflows/: benchmarks-ci.yml  ci.yaml  ci.yml  lint-workflows.yml  release-npm.yml  release-plz.yml  release-python.yml  release-verify.yml  release.yaml  release.yml  skills.yaml  skills.yml  sync-labels.yml  test-smoke.yml
assets/: demo.tape
benchmarks/: .gitignore  README.md  bench  pyproject.toml  run_benchmark.sh
benchmarks/fixtures/extraction/: article-footer-heavy.html  collection-grid.html  documentation-sidebar.html  forum-thread.html  listing-cards.html  product-jsonld.html  service-multi-section.html  visibility-spam.html
benchmarks/fixtures/extraction/golden/: article-footer-heavy.expect  article-footer-heavy.txt  collection-grid.expect  collection-grid.txt  documentation-sidebar.expect  documentation-sidebar.txt  forum-thread.expect  forum-thread.txt  listing-cards.expect  listing-cards.txt  product-jsonld.expect  product-jsonld.txt  service-multi-section.expect  service-multi-section.txt  visibility-spam.expect  visibility-spam.txt
benchmarks/fixtures/perf/: spa-heavy.html  spa-light.html  static-small.html
benchmarks/fixtures/perf/golden/: spa-heavy.expect  spa-light.expect  static-small.expect
benchmarks/node/: package-lock.json  package.json
benchmarks/playwright/: fetch_parallel.js
benchmarks/puppeteer/: fetch.js  package.json
benchmarks/results/: published-equivalence.md  published-extraction-layout.md  published-memory.md  published-parallel-n1.json  published-parallel-n1.md  published-parallel-n2.json  published-parallel-n2.md  published-parallel-n4.json  published-parallel-n4.md  published-parallel-n8.json  published-parallel-n8.md  published-parallel.md  published-size.md  published-time-spa-heavy.json  published-time-spa-heavy.md  published-time-spa-light.json  published-time-spa-light.md  published-time-static-small.json  published-time-static-small.md  published-time.md
benchmarks/src/servo_fetch_bench/: __init__.py  binaries.py  cli.py  config.py  datasets.py  fixtures.py  hostalias.py  hyperfine.py  measure.py  reporting.py  runners.py  scoring.py  sizes.py
benchmarks/tests/: conftest.py  test_binaries.py  test_cli.py  test_config_runner.py  test_config_sanity.py  test_golden_consistency.py  test_hostalias.py  test_measure.py  test_reporting.py  test_scoring.py  test_sizes.py  test_smoke.py
benchmarks/tests/fixtures/: time-l-macos.txt  time-v-gnu.txt
benchmarks/tools/: playwright-runner.js  readability-runner.js
bindings/node/: .gitignore  README.md  biome.jsonc  package.json  pnpm-lock.yaml
bindings/node/src/: binary.test.ts  binary.ts  errors.test.ts  errors.ts  index.ts  rpc-client.ts  schema.test.ts  schema.ts  spawn.ts  (+1 more)
bindings/python/: .gitignore  .mypy-stubtest-allowlist  Cargo.toml  README.md  pyproject.toml
bindings/python/examples/: async_crawl.py  basic_fetch.py  client_batch.py  schema_extraction.py
bindings/python/python/servo_fetch/: __init__.py  _native.pyi  async_api.py  async_api.pyi
bindings/python/src/: client.rs  console.rs  crawl.rs  errors.rs  lib.rs  opts.rs  page.rs  schema.rs  validate.rs
bindings/python/tests/: conftest.py  test_async.py  test_cookies.py  test_fetch.py  test_package.py  test_schema.py  test_validation.py
crates/servo-fetch/: Cargo.toml  README.md
crates/servo-fetch-cli/: Cargo.toml  README.md
crates/servo-fetch-cli/src/: cli.rs  commands.rs  exit.rs  main.rs  mcp.rs  output.rs  progress.rs  rpc.rs  serve.rs  tools.rs  webdriver.rs  wire.rs
crates/servo-fetch-cli/src/commands/: crawl.rs  fetch.rs  map.rs  mcp.rs  rpc.rs  serve.rs  webdriver.rs
crates/servo-fetch-cli/src/mcp/: params.rs  server.rs  tools.rs
crates/servo-fetch-cli/src/mcp/tools/: common.rs  crawl.rs  fetch.rs  map.rs  screenshot.rs
crates/servo-fetch-cli/src/rpc/: dispatch.rs  protocol.rs  transport.rs
crates/servo-fetch-cli/src/serve/: error.rs  extract.rs  handlers.rs  params.rs  response.rs
crates/servo-fetch-cli/src/tools/: common.rs  crawl.rs  error.rs  fetch.rs  limits.rs  map.rs  options.rs  render.rs  screenshot.rs
crates/servo-fetch-cli/tests/: cli.rs  common.rs  mcp.rs  parallel.rs  rpc.rs  webdriver.rs
crates/servo-fetch-types/: Cargo.toml
crates/servo-fetch/examples/: batch_fetch.rs  crawl.rs  crawl_with_filter.rs  error_handling.rs  extract_json.rs  fetch_options.rs  javascript.rs  map.rs  schema_extract.rs  screenshot.rs  simple.rs
crates/servo-fetch/src/: blocking.rs  bridge.rs  client.rs  cookies.rs  crawl.rs  engine.rs  error.rs  extract.rs  fetch.rs  headers.rs  layout.rs  lib.rs  map.rs  net.rs  pdf.rs  robots.rs  runtime.rs  schema.rs  scope.rs  screenshot.rs  sys.rs  visibility.rs  webdriver.rs
crates/servo-fetch/src/blocking/: client.rs
crates/servo-fetch/src/js/: layout.js  visibility.js
crates/servo-fetch/src/sys/: macos.rs
crates/servo-fetch/src/visibility/: a11y.rs  js.rs  selectors.rs
crates/servo-fetch/tests/: extract.rs  headers.rs  visibility.rs  webdriver.rs
crates/servo-fetch/tests/fixtures/: article.html  article_with_meta.html  empty_title.html  missing_body.html  script_only.html
skills/servo-fetch/: SKILL.md  reference.md
src/: bridge.rs  cli.rs  command.rs  commands.rs  crawl.rs  extract.rs  layout.rs  lib.rs  logging.rs  main.rs  mcp.rs  net.rs  output.rs  progress.rs  runtime.rs  sanitize.rs  screenshot.rs
src/commands/: crawl.rs  fetch.rs  mcp.rs
src/mcp/: params.rs  server.rs  tools.rs
tests/: cli.rs  extract.rs  mcp.rs
tests/fixtures/: simple.html  unicode.html  with_scripts.html
(+15 files in other folders)
