[project]
name = "servo-fetch-bench"
version = "0.1.0"
description = "Benchmark harness for servo-fetch."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "rich>=13",
    "psutil>=5.9",
]

[project.scripts]
servo-fetch-bench = "servo_fetch_bench.cli:app"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/servo_fetch_bench"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "UP", "B", "SIM", "RUF",  # base correctness + idiom
    "C4",   # comprehensions — flush out unnecessary list()/dict()/set()
    "PERF", # performance anti-patterns
    "PT",   # pytest style (fixtures, parametrize)
    "RET",  # return-flow simplifications
    "ISC",  # implicit str concat — catch accidental tuple-instead-of-str
    "TID",  # tidy imports
    "PL",   # pylint rules (selected subset by default)
]
ignore = [
    "E501",    # long lines (table header widths)
    "RUF001",  # '×' multiplication sign in labels is intentional
    "RUF002",  # same, in docstrings
    "RUF003",  # same, in comments
    "PLR0913", # many args in CLI commands is expected (Typer options)
    "PLR2004", # magic values in CLI defaults / stat parsing are unavoidable
    "PLR0915", # CLI commands have many statements by nature
    "PLR0912", # CLI commands have branches by nature
    "ISC001",  # redundant with ruff formatter
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
minversion = "8"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
]
xfail_strict = true
filterwarnings = [
    "error",
]
