[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "servo-fetch"
dynamic = ["version"]
description = "Browser engine in a library — fetch, render, and extract web content."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT OR Apache-2.0"
authors = [{ name = "konippi" }]
keywords = ["servo", "browser", "scraping", "extraction", "fetch"]
classifiers = [
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/konippi/servo-fetch"
Repository = "https://github.com/konippi/servo-fetch"
Issues = "https://github.com/konippi/servo-fetch/issues"

[dependency-groups]
dev = ["maturin>=1.7,<2"]
test = [{ include-group = "dev" }, "pytest>=8.3", "pytest-asyncio>=0.24"]
lint = [{ include-group = "dev" }, "ruff>=0.7", "ty>=0.0.35"]
all = [{ include-group = "test" }, { include-group = "lint" }]

[tool.maturin]
python-source = "python"
module-name = "servo_fetch._native"
features = ["extension-module"]
strip = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
filterwarnings = ["error"]
xfail_strict = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = ["B", "C4", "I", "N", "PT", "RUF", "SIM", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["servo_fetch"]

[tool.ty.terminal]
error-on-warning = true
