[package]
name = "servo-fetch-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A browser engine in a binary — fetch, render, and extract web content powered by Servo."
readme = "README.md"
keywords = ["servo", "headless-browser", "fetch", "mcp", "cli"]
categories = ["command-line-utilities", "web-programming"]
include = ["src/**/*", "Cargo.toml", "LICENSE-MIT", "LICENSE-APACHE", "README.md"]

[[bin]]
name = "servo-fetch"
path = "src/main.rs"

[dependencies]
servo-fetch = { workspace = true }
anyhow = { workspace = true }
axum = "0.8"
base64 = { workspace = true }
clap = { version = "4", features = ["derive"] }
rmcp = { version = "1", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
rustls = { workspace = true }
schemars = "1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rmcp = { version = "1", features = ["client", "transport-io", "transport-child-process"] }
futures-util = "0.3"

[lints]
workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/servo-fetch-v{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "servo-fetch"
