[package]
name = "servo-fetch-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A browser engine in a binary — fetch, render, and extract web content as Markdown, JSON, or screenshots. Powered by Servo."
readme = "README.md"
keywords = ["servo", "headless-browser", "fetch", "mcp", "cli"]
categories = ["command-line-utilities", "web-programming"]
include = ["src/**/*", "Cargo.toml", "LICENSE-MIT", "LICENSE-APACHE", "README.md"]
autotests = false

[[bin]]
name = "servo-fetch"
path = "src/main.rs"

[[test]]
name = "cli"
path = "tests/cli.rs"

[[test]]
name = "mcp"
path = "tests/mcp.rs"

[[test]]
name = "parallel"
path = "tests/parallel.rs"

[[test]]
name = "rpc"
path = "tests/rpc.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
futures-util = { workspace = true }
humantime = { workspace = true }
indicatif = { workspace = true }
libc = { workspace = true }
rmcp = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
servo-fetch = { workspace = true }
servo-fetch-types = { workspace = true, features = ["schema"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "signal", "io-std", "io-util", "sync"] }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
futures-util = { workspace = true }
predicates = { workspace = true }
rmcp = { workspace = true, features = ["client", "transport-child-process"] }
tempfile = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/servo-fetch-v{ version }-{ target }{ archive-suffix }"
bin-dir = "servo-fetch-v{ version }-{ target }/{ bin }{ binary-ext }"
disabled-strategies = ["quick-install", "compile"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
