[package]
name = "servo-fetch"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Fetch, render, and extract web content as Markdown, JSON, or screenshots with an embedded Servo browser engine. No Chromium required."
readme = "README.md"
keywords = ["servo", "headless-browser", "web-scraping", "readability", "content-extraction"]
categories = ["web-programming", "web-programming::http-client"]
include = ["src/**/*", "Cargo.toml", "LICENSE-MIT", "LICENSE-APACHE", "README.md"]

[dependencies]
servo = { workspace = true }
servo-base = { workspace = true, optional = true }
anyhow = { workspace = true }
bitflags = { workspace = true }
cookie = { workspace = true }
cssparser = { workspace = true }
dom_query = { workspace = true }
dom_smoothie = { workspace = true }
dpi = { workspace = true }
euclid = { workspace = true }
globset = { workspace = true }
htmd = { workspace = true }
http = { workspace = true }
image = { workspace = true }
pdf-extract = { workspace = true }
psl = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
ureq = { workspace = true }
quick-xml = { workspace = true }
flate2 = { workspace = true }
humantime = { workspace = true }

[features]
# W3C WebDriver support: persistent, scriptable browser sessions on top of the
# embedded Servo engine. Off by default; pulls in `servo-base` for the
# constellation reply channels used to round-trip WebDriver script commands.
webdriver = ["dep:servo-base"]

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
os_pipe = "1"

[target.'cfg(windows)'.dependencies]
servo = { workspace = true, features = ["no-wgl"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "test-util"] }
wiremock = { workspace = true }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-shear]
ignored = ["rustls"]

[package.metadata.cargo-machete]
ignored = ["rustls"]

[lints]
workspace = true
